--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ strong {
 }
 
 .section-heading {
-	margin-bottom: em(7);
+	margin-bottom: em(12);
 	.section-title {
 		font-weight: 800;
 		color: #fff;
@@ -84,12 +84,12 @@ strong {
 	}
 	.swiper-slide {
 		cursor: pointer;
-		width: calc(5vw - 20%);
-		max-width: 225px;
-		max-height: 305px;
-		margin: 0px 0px 0px rem(5);
-		border: 5px solid transparent;
-		display: flex;
+		// width: calc(5vw + 20%) !important;
+		// max-width: 225px;
+		// min-width: 225px;
+		// margin: 0px 0px 0px rem(5);
+		// border: 5px solid transparent;
+		// display: flex;
 		flex-direction: column;
 		transition: all 0.3s ease-in-out;
 		// removed per HC request
@@ -102,20 +102,21 @@ strong {
 		background-position-y: bottom;
 
 		border-radius: 20px;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
+		position: relative;
+		// display: -webkit-box;
+		// display: -ms-flexbox;
+		// display: flex;
 		-webkit-box-align: end;
 		-ms-flex-align: end;
 		align-items: flex-end;
-		padding-bottom: 19px;
+		margin-bottom: em(19);
 		// Extra Small devices (landscape phones, 576px and up)
 		@media (max-width: 576px) {
-			min-height: 221px;
-			max-height: 221px;
+			// min-height: 221px;
+			// max-height: 221px;
 
-			min-width: 192px;
-			max-width: 192px;
+			// min-width: 192px;
+			// max-width: 192px;
 			a {
 				text-decoration: none;
 			}
@@ -133,9 +134,28 @@ strong {
 			}
 		}
 
+		// .image-wrapper {
+		// 	position: relative;
+		// 	width: auto;
+		// 	justify-content: center;
+		// }
+
 		.artist-img {
 			border-radius: 10px;
+			// position: absolute;
+			// display: block;
+			// width: 0px;
+			// height: 0px;
+			// min-width: 100%;
+			// max-width: 100px;
+			// min-height: 100%;
+			// max-height: 100%;
 		}
+
+		.card-details {
+			padding: 0px 1em 0px 0px;
+		}
+
 		.event {
 			font-size: em(18);
 			margin: 20px 0 5px 0;
@@ -143,13 +163,13 @@ strong {
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			width: 225px;
+			width: inherit;
 		}
 		.artist {
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			width: 225px;
+			width: inherit;
 		}
 
 		//   ****removed per HC request****
